--- a/apps/downloader/package.json
+++ b/apps/downloader/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@types/uuid": "^8.3.4",
     "@vx/prisma": "*",
+    "@vx/worker": "*",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "fs-extra": "^10.1.0",
