--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@trpc/react": "^9.26.2",
     "@trpc/server": "^9.26.2",
     "@vx/prisma": "*",
+    "@vx/worker": "*",
     "daisyui": "^2.31.0",
     "next": "12.3.1",
     "next-transpile-modules": "^9.0.0",
