--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build": "yarn wrap-env turbo run build"
   },
   "devDependencies": {
+    "@types/bull": "^3.15.9",
     "@types/node": "^18.6.2",
     "prettier": "^2.7.1",
     "prisma": "^4.3.1",
@@ -28,9 +29,11 @@
   },
   "dependencies": {
     "@prisma/client": "^4.3.1",
+    "bull": "^4.9.0",
     "dotenv-cli": "^6.0.0",
     "tsx": "^3.9.0",
     "turbo": "^1.5.3",
+    "uuidv4": "^6.2.13",
     "zod": "^3.19.1"
   },
   "prisma": {
